--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -78,8 +78,8 @@ body{
     margin: 0px;
     display: flex;
     color: white;
-    width: 400px;
-    font-size: 50px;
+    width: 600px;
+    font-size: 100px;
     padding-left: 25px;
     padding-top: 25px;
 }
@@ -103,4 +103,53 @@ body{
     width: 95%;
     padding: 10px;
     margin: 25px auto;
+    align-items: center;
+    height: 30%;
 }
+
+#teamMembersTitle{
+    font-size: 100px;
+    flex:1;
+}
+
+#teamMembersList{
+    display: flex;
+    flex:3;
+    flex-direction: row;
+}
+
+#teamMember{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: rgba(110,110,110,.6);
+}
+
+#teamMemberName{
+    font-size: 30px;
+    font-style: bolder;
+    color: white;
+    padding-left: 20px;
+    padding-top: 10px;
+    margin: 6px;
+    text-align: center;
+}
+
+#responsibilities{
+    font-size: 20px;
+    color: white;
+    margin: 5px;
+    text-align: center;
+}
+
+#role{
+    font-size: 25px;
+    color: white;
+    margin: 5px;
+    text-align: center;
+    background-color: rgba(10,10,200,.6);
+}
+
