--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -58,9 +58,9 @@ body{
 
 #webpageSlogan{
     display: flex;
-    width: 400px;
+    width: 200px;
     color: white;
-    font-size: 100px;
+    font-size: 80px;
     padding-top: 50px;
     padding-left: 25px;
 }
@@ -188,4 +188,12 @@ body{
 
 #contactUsBtn:hover {
     background-color: #0056b3;
+}
+
+#styledImg{
+    width: 100%;
+}
+
+#locationContainer{
+    margin-top: 30px;
 }
